# wearable-accelerometer

./: Adxl345.cpp  Adxl345.h  CMakeLists.txt  README.md  WearableAccel.ino  build.sh  flash.sh
.devcontainer/: Dockerfile  devcontainer.json
cmake/: avr-toolchain.cmake
lib/: CMakeLists.txt
src/: Adxl345.cpp  Adxl345.h  Display.cpp  Display.h  Logger.cpp  Logger.h  System.cpp  System.h  debug.h  main.cpp  math_utils.h
